# dtgen

./: .gitignore  LICENSE  README.md  pyproject.toml
dtgen/: __init__.py  cli.py  generator.py
tests/: api.h  example.dts  test_cli.py  test_generator.py
typings/devicetree/: dtlib.pyi
