[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtgen"
version = "0.1.0"
description = "A command-line tool for reading Device Tree files and generating C code."
authors = [
    { name = "Dave Bort", email = "git@dbort.com" }
]
license = { text = "MIT" }
dependencies = [
    "devicetree>=0.0.2", # Zephyr's .dts parser
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
dtgen = "dtgen.cli:main"

[project.optional-dependencies]
dev = [
    "ufmt>=2.8.0"
]